2007-11-04  Roland Mas  <lolando@debian.org>

	* Several fixes to remove vulnerabilities against symlink attacks
	in /tmp (CVE-2007-3921).
	* common/include/cron_utils.php: Use semaphore rather than
	insecure lock files.
	* cronjobs/massmail.php: Adapt to that semaphore change.
	* www/soap/index.php: Commented out debugging code that could be
	used to overwrite files.
	* cronjobs/mail/mailaliases.php and mailing_lists_create.php: Use
	/var/lib/gforge/dumps/mailman-aliases rather than
	/tmp/mailman-aliases. 

2006-04-28 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Fixing daily_task_email cronjob
		http://gforge.org/tracker/?func=detail&aid=2307&group_id=1&atid=106
	* Applied patch : Missing links back from various admin sub-tabs
		http://gforge.org/tracker/?func=detail&aid=2266&group_id=1&atid=106
	* Applied patch : COMMIT underflow in db/20050325-2.php
		http://gforge.org/tracker/?func=detail&aid=1800&group_id=1&atid=106

2006-04-26 Tim Perdue <tim@gforgegroup.com>

	* fixed a bug in artifactfactory where arrays were being saved and creating
	an unsolvable problem and broken sql query.

2006-04-20 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : use a parameter instead of hardcoded admin address
		https://gforge.org/tracker/?func=detail&aid=2251&group_id=1&atid=106
	* Applied patch : Add Time Entry to SOAP interface
		https://gforge.org/tracker/?func=detail&aid=2182&group_id=1&atid=106
	* Applied patch : Correction for French.tab
		https://gforge.org/tracker/?func=detail&aid=2115&group_id=1&atid=106
	* Applied patch : tracker.php lacks a "break" in downloadcsv clause
		https://gforge.org/tracker/?func=detail&aid=1873&group_id=1&atid=106
	* Applied patch : Mails cannot be sent when using php safe_mode
		https://gforge.org/tracker/?func=detail&aid=1810&group_id=1&atid=106

2006-03-27 Daniel Perez <daniel@gforgegroup.com>
	* Fixed bug : Capital letters with "stress marks" are wrong in language/Spanish.tab